<resources>
    <string name="app_name">CRTcpDemo</string>
    <string name="robot_connect_tittle">Robot Connect</string>
    <string name="connect_robot">connect robot</string>
    <string name="change_power_on">power on</string>
    <string name="change_power_off">power off</string>
    <string name="enable">enable</string>
    <string name="disable">disable</string>
    <string name="clear_alarm">Clear Error</string>
    <string name="speed_ratio_">Speed Ratio:</string>
    <string name="confirm">Confirm</string>
    <string name="emergency_stop">emergency stop</string>
    <string name="move">move</string>
    <string name="stop">stop</string>
    <string name="run_force_control_path_file_tips">Run path file with force control,file path:</string>
    <string name="set">set</string>
    <string name="get">get</string>
    <string name="io_index">Digit Output Index:</string>
    <string name="is">is</string>
    <string name="open_permission">Please go to settings to enable permissions</string>
    <string name="notice_permission"> Not have permission </string>
    <string name="permission_text_camera"> Sorry that App needs some permissions to run.</string>
    <string name="exit_app">Exit APP</string>
    <string name="disconnect_robot">disconnect robot</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="get_pos">Get Current Coordinate</string>
    <string name="get_joint">Get Current Joint</string>
    <string name="ip_address">IP Address:</string>
    <string name="dashboard_port">Dashboard Port:</string>
    <string name="move_port">Move Port:</string>
    <string name="feedback_port">Feedback Port:</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="dashboard_function_tittle">Dashboard Function</string>
    <string name="move_function_tittle">Move Function</string>
    <string name="reset_robot">Reset Robot</string>
    <string name="movej">MovJ</string>
    <string name="movel">MoveL</string>
    <string name="joint_move_j">JointMovJ</string>
    <string name="status">Status:</string>
    <string name="feedback" >Feedback(Scrollable)</string>
    <string name="current_speed_ratio_text">Current Speed Ratio:</string>
    <string name="robot_mode_text">Robot Mode:</string>
    <string name="error_info">Error Info</string>
    <string name="log">Log</string>
    <string name="digital_input_text">Digital Inputs:</string>
    <string name="digital_outputs_text">Digital Outputs:</string>
    <string name="send_msg">Send Msg:</string>
    <string name="receive_msg">Receive Msg:</string>
</resources>