<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_connect_robot"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/connect_robot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_change_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_power_on"
        app:layout_constraintLeft_toRightOf="@+id/button_connect_robot"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_change_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        app:layout_constraintLeft_toRightOf="@+id/button_change_power"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_clear_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_alarm"
        app:layout_constraintLeft_toRightOf="@+id/button_change_enable"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_speed_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_ratio_"
        app:layout_constraintBottom_toBottomOf="@id/button_clear_alarm"
        app:layout_constraintLeft_toRightOf="@+id/button_clear_alarm"
        app:layout_constraintTop_toTopOf="@id/button_clear_alarm" />

    <EditText
        android:id="@+id/edit_speed_ratio"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="50"
        app:layout_constraintBottom_toBottomOf="@id/button_clear_alarm"
        app:layout_constraintLeft_toRightOf="@+id/text_speed_ratio"
        app:layout_constraintTop_toTopOf="@id/button_clear_alarm" />

    <Button
        android:id="@+id/button_speed_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintLeft_toRightOf="@+id/edit_speed_ratio"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_emergency_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency_stop"
        app:layout_constraintLeft_toRightOf="@+id/button_speed_ratio"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/button_connect_robot"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MoveJ" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="X" />

            <EditText
                android:id="@+id/move_j_x_edit"
                android:inputType="numberDecimal|numberSigned"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Y" />

            <EditText
                android:id="@+id/move_j_y_edit"
                android:layout_width="80dp"
                android:inputType="numberDecimal|numberSigned"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Z" />

            <EditText
                android:id="@+id/move_j_z_edit"
                android:layout_width="80dp"
                android:inputType="numberDecimal|numberSigned"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RX" />

            <EditText
                android:id="@+id/move_j_rx_edit"
                android:layout_width="80dp"
                android:inputType="numberDecimal|numberSigned"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RY" />

            <EditText
                android:id="@+id/move_j_ry_edit"
                android:layout_width="80dp"
                android:inputType="numberDecimal|numberSigned"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RZ" />

            <EditText
                android:id="@+id/move_j_rz_edit"
                android:layout_width="80dp"
                android:inputType="numberDecimal|numberSigned"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/move_j_move_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move" />

            <Button
                android:id="@+id/move_j_stop_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />

            <Button
                android:id="@+id/get_pos_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_pos"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trace_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_force_control_path_file_tips" />

            <EditText
                android:id="@+id/trace_file_path"
                android:text="button_drag_track.json"
                android:layout_width="240dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/trace_start_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/move" />

            <Button
                android:id="@+id/trace_stop_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/io_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/motion_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/set_io_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/io_index" />

            <EditText
                android:id="@+id/set_io_edit"
                android:text="1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is" />

            <Spinner
                android:id="@+id/set_io_spinner"
                android:background="#fff"
                android:layout_width="80dp"
                android:layout_height="40dp" />


            <Button
                android:id="@+id/get_io_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/io_index" />

            <EditText
                android:id="@+id/get_io_edit"
                android:text="1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is" />

            <Spinner
                android:id="@+id/get_io_spinner"
                android:background="#fff"
                android:layout_width="80dp"
                android:layout_height="40dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/io_layout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/robot_mode_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Robot state:" />

            <TextView
                android:id="@+id/speed_scaling_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="Speed scaling:" />

            <TextView
                android:id="@+id/program_state_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="Program state:" />

            <TextView
                android:id="@+id/digital_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="Digital input:" />

            <TextView
                android:id="@+id/digital_output_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="Digital output:" />

            <TextView
                android:id="@+id/q_actual_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="q actual:" />

            <TextView
                android:id="@+id/tool_vector_actual_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="Tool vector actual:" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/jog_move_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="joint" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="coordinate" />
            </com.google.android.material.tabs.TabLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/jog_j1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="J1" />

                <Button
                    android:id="@+id/jog_j1_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <Button
                    android:id="@+id/jog_j1_minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/jog_j2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="J2" />

                <Button
                    android:id="@+id/jog_j2_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <Button
                    android:id="@+id/jog_j2_minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/jog_j3_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="J3" />

                <Button
                    android:id="@+id/jog_j3_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <Button
                    android:id="@+id/jog_j3_minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/jog_j4_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="J4" />

                <Button
                    android:id="@+id/jog_j4_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <Button
                    android:id="@+id/jog_j4_minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/jog_j5_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="J5" />

                <Button
                    android:id="@+id/jog_j5_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <Button
                    android:id="@+id/jog_j5_minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/jog_j6_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="J6" />

                <Button
                    android:id="@+id/jog_j6_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

                <Button
                    android:id="@+id/jog_j6_minus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>